--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -13,19 +13,6 @@
         android:background="#3F78B5"
         android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/editText"
-            android:layout_width="230dp"
-            android:layout_height="79dp"
-            android:baselineAligned="false"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Enter symptoms"
-            android:translationX="60sp"
-            android:translationY="180sp"
-            android:visibility="visible"
-            tools:visibility="visible" />
-
         <ImageView
             android:id="@+id/image_symptom"
             android:layout_width="match_parent"
@@ -34,11 +21,19 @@
             app:srcCompat="@drawable/symptoms" />
 
         <Button
-            android:id="@+id/buttonGo"
+            android:id="@+id/FeverButton"
             android:layout_width="115dp"
             android:layout_height="38dp"
-            android:text="Go!"
-            android:translationX="290sp"
+            android:text="Fever"
+            android:translationX="150sp"
             android:translationY="-400sp" />
+
+        <Button
+            android:id="@+id/CoughButton"
+            android:layout_width="115dp"
+            android:layout_height="38dp"
+            android:text="Cough"
+            android:translationX="150sp"
+            android:translationY="-480sp" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
